force-app/main/default/objects/Asset_Milestone__c/Asset_Milestone__c.object-meta.xml
<CustomObject>
    <label>設備マイルストーン</label>
    <nameField>
        <displayFormat>AM-{0000}</displayFormat>
        <label>マイルストーン番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>設備マイルストーン</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>