force-app/main/default/objects/Asset_Milestone__c/fields/Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount__c</fullName>
    <label>実績金額</label>
    <description>このマイルストーン実施に伴い発生した実績売上金額</description>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>