force-app/main/default/objects/Asset_Milestone__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>設備</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>マイルストーン</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>MasterDetail</type>
</CustomField>