force-app/main/default/objects/Asset_Milestone__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <label>実施日</label>
    <type>Date</type>
</CustomField>