force-app/main/default/objects/Asset_Milestone__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>サマリ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>