force-app/main/default/objects/Asset_Milestone__c/fields/Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Type__c</fullName>
    <label>マイルストーン種別</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>納品設置</fullName>
            </value>
            <value>
                <fullName>試運転</fullName>
            </value>
            <value>
                <fullName>定期点検</fullName>
                <default>true</default>
                <label>定期点検</label>
            </value>
            <value>
                <fullName>部品交換</fullName>
            </value>
            <value>
                <fullName>保守訪問</fullName>
            </value>
            <value>
                <fullName>ファームウェア更新</fullName>
            </value>
            <value>
                <fullName>故障対応</fullName>
            </value>
            <value>
                <fullName>保守契約更新</fullName>
            </value>
            <value>
                <fullName>保守期限</fullName>
            </value>
            <value>
                <fullName>解約</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>