force-app/main/default/objects/Asset_Milestone__c/fields/Planned_Amount__c.field-meta.xml
<CustomField>
    <fullName>Planned_Amount__c</fullName>
    <label>予定金額</label>
    <description>このマイルストーンで発生する予定の売上金額（保守契約・点検・部品交換等）</description>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>