force-app/main/default/objects/Asset_Milestone__c/fields/Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date__c</fullName>
    <label>予定日</label>
    <required>true</required>
    <type>Date</type>
</CustomField>