force-app/main/default/objects/Asset_Milestone__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>予定</fullName>
                <default>true</default>
                <label>予定</label>
            </value>
            <value>
                <fullName>実施済</fullName>
            </value>
            <value>
                <fullName>遅延</fullName>
            </value>
            <value>
                <fullName>キャンセル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>